# ZweiBot

./: .gitignore  Cargo.toml  README.md  Zwei.komodoproject  Zwei.py  Zwei.sql  create_db.sql  main.py
.github/workflows/: main.yml
cogs/: _datastores.py  base.py  modtools.py
data/: default_config.json  default_zweiDB.sdb
src/: db.rs  dbx.rs  handlers.rs  main.rs  zwei_conf.rs
src/commands/: management.rs  misc.rs  mod.rs  modtools.rs  subs.rs
src/data/: default_config.json
utils/: ZweiHelp.py  _datastores.py
