[package]
name = "zwei_bot"
version = "0.1.0"
edition = "2021"
authors = ["RivenSkaye <riven@tae.moe>"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version="0.11", features=["framework", "standard_framework"] }
serde = "^1.0.100"
serde_json = "^1.0.70"
tokio = { version = "^1.21", features = ["macros", "rt-multi-thread", "time", "signal"] }
chrono = "0.4"
# I swear this is just to port shit
#sqlx = {version = "0.6", features = ["runtime-tokio-rustls"]}
rusqlite = {version="0.28", features=["bundled"]}
once_cell = "1.9.0"

[profile.release]
opt-level = 2
debug = 0
debug-assertions = false
overflow-checks = true
lto = true
incremental = true
codegen-units = 96

[profile.release.build-override]
opt-level = 2
codegen-units = 96

[profile.dev]
incremental = true

[features]
