[package]
    authors      = ["RivenSkaye <riven@tae.moe>"]
    edition      = "2021"
    license-file = "LICENSE"
    name         = "zwei_bot"
    version      = "0.1.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    chrono = "0.4"
    env_logger = "0.10"
    log = "0.4"
    serde = "^1.0.100"
    serde_json = "^1.0.70"
    serenity = { version = "0.11", features = [
        "framework",
        "standard_framework"
    ] }
    tokio = { version = "^1.21", features = [
        "macros",
        "rt-multi-thread",
        "signal",
        "time"
    ] }
    # I swear this is just to port shit
    once_cell = "1.9.0"
    # rusqlite = { version = "0.28", features = ["bundled"] }
    sqlx = { version = "0.6", features = [
        "all-types",
        "chrono",
        "macros",
        "runtime-tokio-rustls",
        "sqlite"
    ] }

[profile.release]
    codegen-units    = 96
    debug            = 0
    debug-assertions = false
    incremental      = true
    lto              = true
    opt-level        = 2
    overflow-checks  = true

[profile.dev]
    incremental = true

    [profile.dev.build-override]
        codegen-units = 96
        opt-level     = 2
