[package]
    authors      = ["RivenSkaye <riven@tae.moe>"]
    edition      = "2021"
    license-file = "LICENSE"
    name         = "zwei_bot"
    version      = "0.1.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    chrono = "0.4"
    env_logger = "0.10"
    log = "0.4"
    once_cell = "^1"
    serde = "^1"
    serde_json = "^1"
    serenity = { version = "0.11", features = [
        "framework",
        "standard_framework"
    ] }
    sqlx = { version = "0.7", default-features = false, features = [
        "_unstable-all-types",
        "chrono",
        "macros",
        "migrate",
        "runtime-tokio-rustls",
        "sqlite"
    ] }
    tokio = { version = "^1", features = [
        "macros",
        "rt-multi-thread",
        "signal",
        "time"
    ] }

[profile.release]
    codegen-units    = 96
    debug            = 0
    debug-assertions = false
    incremental      = true
    lto              = true
    opt-level        = 2
    overflow-checks  = true

[profile.dev]
    incremental = true

    [profile.dev.build-override]
        codegen-units = 96
        opt-level     = 2
